lexparse3/parser.output
Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | ProgramFull

    3 ProgramFull: SimpleDeclaration TERMINAL
    4            | SimpleDeclaration TERMINAL ProgramFull
    5            | RoutineDeclaration TERMINAL
    6            | RoutineDeclaration TERMINAL ProgramFull

    7 SimpleDeclaration: VariableDeclaration
    8                  | TypeDeclaration

    9 VariableDeclaration: VAR_TOKEN IDENT COLON Type
   10                    | VAR_TOKEN IDENT COLON Type IS_TOKEN Expression
   11                    | VAR_TOKEN IDENT IS_TOKEN Expression

   12 VariableDeclarations: VariableDeclaration TERMINAL
   13                     | VariableDeclaration TERMINAL VariableDeclarations

   14 TypeDeclaration: TYPE_TOKEN IDENT IS_TOKEN Type

   15 Type: PrimitiveType
   16     | ArrayType
   17     | RecordType
   18     | IDENT

   19 PrimitiveType: INT_TOKEN
   20              | REAL_TOKEN
   21              | BOOL_TOKEN

   22 RecordType: REC_TOKEN END_TOKEN
   23           | REC_TOKEN VariableDeclarations END_TOKEN

   24 ArrayType: ARRAY_TOKEN LBRACKET Expression RBRACKET Type
   25          | ARRAY_TOKEN LBRACKET RBRACKET Type
   26          | ARRAY_TOKEN Type

   27 Expression: Relation
   28           | Relation Logical Relation

   29 Logical: AND_TOKEN
   30        | OR_TOKEN
   31        | XOR_TOKEN

   32 Relation: Simple
   33         | Simple Correlation Simple

   34 Correlation: LESS
   35            | LESS_OR_EQ
   36            | MORE
   37            | MORE_OR_EQ
   38            | EQ
   39            | NOT_EQ

   40 Simple: Factor
   41       | Factor FactorSign Factor

   42 FactorSign: MULTIPLY
   43           | DIVIDE
   44           | MOD

   45 Factor: Summand
   46       | Summand Sign Summand

   47 Sign: PLUS
   48     | MINUS

   49 Summand: Primary
   50        | LPAREN Expression RPAREN

   51 Primary: INT_LITERAL
   52        | REAL_LITERAL
   53        | TRUE_TOKEN
   54        | FALSE_TOKEN
   55        | ModifiablePrimary
   56        | RoutineCall

   57 ModifiablePrimary: IDENT
   58                  | IDENT ModifiableSecondary

   59 ModifiableSecondary: POINT IDENT
   60                    | LBRACKET Expression RBRACKET
   61                    | POINT IDENT ModifiableSecondary
   62                    | LBRACKET Expression RBRACKET ModifiableSecondary

   63 RoutineDeclaration: ROUTINE_TOKEN IDENT
   64                   | ROUTINE_TOKEN IDENT IS_TOKEN END_TOKEN
   65                   | ROUTINE_TOKEN IDENT IS_TOKEN Body END_TOKEN
   66                   | ROUTINE_TOKEN IDENT COLON Type
   67                   | ROUTINE_TOKEN IDENT COLON Type IS_TOKEN END_TOKEN
   68                   | ROUTINE_TOKEN IDENT COLON Type IS_TOKEN Body END_TOKEN
   69                   | ROUTINE_TOKEN IDENT LPAREN RPAREN
   70                   | ROUTINE_TOKEN IDENT LPAREN Parameters RPAREN
   71                   | ROUTINE_TOKEN IDENT LPAREN RPAREN IS_TOKEN END_TOKEN
   72                   | ROUTINE_TOKEN IDENT LPAREN Parameters RPAREN IS_TOKEN END_TOKEN
   73                   | ROUTINE_TOKEN IDENT LPAREN RPAREN IS_TOKEN Body END_TOKEN
   74                   | ROUTINE_TOKEN IDENT LPAREN Parameters RPAREN IS_TOKEN Body END_TOKEN
   75                   | ROUTINE_TOKEN IDENT LPAREN RPAREN COLON Type
   76                   | ROUTINE_TOKEN IDENT LPAREN Parameters RPAREN COLON Type
   77                   | ROUTINE_TOKEN IDENT LPAREN RPAREN COLON Type IS_TOKEN END_TOKEN
   78                   | ROUTINE_TOKEN IDENT LPAREN Parameters RPAREN COLON Type IS_TOKEN END_TOKEN
   79                   | ROUTINE_TOKEN IDENT LPAREN RPAREN COLON Type IS_TOKEN Body END_TOKEN

   80 $@1: %empty

   81 RoutineDeclaration: ROUTINE_TOKEN IDENT LPAREN Parameters RPAREN COLON Type IS_TOKEN Body END_TOKEN $@1

   82 ParameterDeclaration: IDENT COLON IDENT
   83                     | IDENT COLON PrimitiveType

   84 Parameters: ParameterDeclaration
   85           | ParameterDeclaration COMMA Parameters

   86 Body: SimpleDeclaration TERMINAL
   87     | Statement TERMINAL
   88     | SimpleDeclaration TERMINAL Body
   89     | Statement TERMINAL Body

   90 Statement: Assignment
   91          | RoutineCall
   92          | WhileLoop
   93          | ForLoop
   94          | IfStatement

   95 Assignment: ModifiablePrimary ASSIGN Expression

   96 RoutineCall: IDENT LPAREN RPAREN
   97            | IDENT LPAREN Expressions RPAREN

   98 Expressions: Expression
   99            | Expression COMMA Expressions

  100 WhileLoop: WHILE_TOKEN Expression LOOP_TOKEN END_TOKEN
  101          | WHILE_TOKEN Expression LOOP_TOKEN Body END_TOKEN

  102 ForLoop: FOR_TOKEN IDENT Range LOOP_TOKEN END_TOKEN
  103        | FOR_TOKEN IDENT Range LOOP_TOKEN Body END_TOKEN

  104 Range: IN_TOKEN Expression FALLEN_COLON Expression
  105      | IN_TOKEN REVERSE_TOKEN Expression FALLEN_COLON Expression

  106 IfStatement: IF_TOKEN Expression THEN_TOKEN Body END_TOKEN
  107            | IF_TOKEN Expression THEN_TOKEN END_TOKEN
  108            | IF_TOKEN Expression THEN_TOKEN Body ELSE_TOKEN Body END_TOKEN
  109            | IF_TOKEN Expression THEN_TOKEN ELSE_TOKEN Body END_TOKEN
  110            | IF_TOKEN Expression THEN_TOKEN Body ELSE_TOKEN END_TOKEN
  111            | IF_TOKEN Expression THEN_TOKEN ELSE_TOKEN END_TOKEN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN (258) 95
    LESS_OR_EQ (259) 35
    MORE_OR_EQ (260) 37
    NOT_EQ (261) 39
    FALLEN_COLON (262) 104 105
    TERMINAL (263) 3 4 5 6 12 13 86 87 88 89
    COLON (264) 9 10 66 67 68 75 76 77 78 79 81 82 83
    COMMA (265) 85 99
    LBRACKET (266) 24 25 60 62
    RBRACKET (267) 24 25 60 62
    LPAREN (268) 50 69 70 71 72 73 74 75 76 77 78 79 81 96 97
    RPAREN (269) 50 69 70 71 72 73 74 75 76 77 78 79 81 96 97
    MULTIPLY (270) 42
    DIVIDE (271) 43
    MOD (272) 44
    PLUS (273) 47
    MINUS (274) 48
    POINT (275) 59 61
    LESS (276) 34
    MORE (277) 36
    EQ (278) 38
    VAR_TOKEN (279) 9 10 11
    IS_TOKEN (280) 10 11 14 64 65 67 68 71 72 73 74 77 78 79 81
    TYPE_TOKEN (281) 14
    ROUTINE_TOKEN (282) 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 81
    END_TOKEN (283) 22 23 64 65 67 68 71 72 73 74 77 78 79 81 100 101 102 103 106 107 108 109 110 111
    INT_TOKEN (284) 19
    REAL_TOKEN (285) 20
    BOOL_TOKEN (286) 21
    REC_TOKEN (287) 22 23
    ARRAY_TOKEN (288) 24 25 26
    WHILE_TOKEN (289) 100 101
    LOOP_TOKEN (290) 100 101 102 103
    FOR_TOKEN (291) 102 103
    IN_TOKEN (292) 104 105
    REVERSE_TOKEN (293) 105
    IF_TOKEN (294) 106 107 108 109 110 111
    THEN_TOKEN (295) 106 107 108 109 110 111
    ELSE_TOKEN (296) 108 109 110 111
    AND_TOKEN (297) 29
    OR_TOKEN (298) 30
    XOR_TOKEN (299) 31
    TRUE_TOKEN (300) 53
    FALSE_TOKEN (301) 54
    IDENT (302) 9 10 11 14 18 57 58 59 61 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 81 82 83 96 97 102 103
    INT_LITERAL (303) 51
    REAL_LITERAL (304) 52


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    Program (51)
        on left: 1 2
        on right: 0
    ProgramFull (52)
        on left: 3 4 5 6
        on right: 2 4 6
    SimpleDeclaration (53)
        on left: 7 8
        on right: 3 4 86 88
    VariableDeclaration (54)
        on left: 9 10 11
        on right: 7 12 13
    VariableDeclarations (55)
        on left: 12 13
        on right: 13 23
    TypeDeclaration (56)
        on left: 14
        on right: 8
    Type (57)
        on left: 15 16 17 18
        on right: 9 10 14 24 25 26 66 67 68 75 76 77 78 79 81
    PrimitiveType (58)
        on left: 19 20 21
        on right: 15 83
    RecordType (59)
        on left: 22 23
        on right: 17
    ArrayType (60)
        on left: 24 25 26
        on right: 16
    Expression (61)
        on left: 27 28
        on right: 10 11 24 50 60 62 95 98 99 100 101 104 105 106 107 108 109 110 111
    Logical (62)
        on left: 29 30 31
        on right: 28
    Relation (63)
        on left: 32 33
        on right: 27 28
    Correlation (64)
        on left: 34 35 36 37 38 39
        on right: 33
    Simple (65)
        on left: 40 41
        on right: 32 33
    FactorSign (66)
        on left: 42 43 44
        on right: 41
    Factor (67)
        on left: 45 46
        on right: 40 41
    Sign (68)
        on left: 47 48
        on right: 46
    Summand (69)
        on left: 49 50
        on right: 45 46
    Primary (70)
        on left: 51 52 53 54 55 56
        on right: 49
    ModifiablePrimary (71)
        on left: 57 58
        on right: 55 95
    ModifiableSecondary (72)
        on left: 59 60 61 62
        on right: 58 61 62
    RoutineDeclaration (73)
        on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 81
        on right: 5 6
    $@1 (74)
        on left: 80
        on right: 81
    ParameterDeclaration (75)
        on left: 82 83
        on right: 84 85
    Parameters (76)
        on left: 84 85
        on right: 70 72 74 76 78 81 85
    Body (77)
        on left: 86 87 88 89
        on right: 65 68 73 74 79 81 88 89 101 103 106 108 109 110
    Statement (78)
        on left: 90 91 92 93 94
        on right: 87 89
    Assignment (79)
        on left: 95
        on right: 90
    RoutineCall (80)
        on left: 96 97
        on right: 56 91
    Expressions (81)
        on left: 98 99
        on right: 97 99
    WhileLoop (82)
        on left: 100 101
        on right: 92
    ForLoop (83)
        on left: 102 103
        on right: 93
    Range (84)
        on left: 104 105
        on right: 102 103
    IfStatement (85)
        on left: 106 107 108 109 110 111
        on right: 94


State 0

    0 $accept: . Program $end

    VAR_TOKEN      shift, and go to state 1
    TYPE_TOKEN     shift, and go to state 2
    ROUTINE_TOKEN  shift, and go to state 3

    $default  reduce using rule 1 (Program)

    Program              go to state 4
    ProgramFull          go to state 5
    SimpleDeclaration    go to state 6
    VariableDeclaration  go to state 7
    TypeDeclaration      go to state 8
    RoutineDeclaration   go to state 9


State 1

    9 VariableDeclaration: VAR_TOKEN . IDENT COLON Type
   10                    | VAR_TOKEN . IDENT COLON Type IS_TOKEN Expression
   11                    | VAR_TOKEN . IDENT IS_TOKEN Expression

    IDENT  shift, and go to state 10


State 2

   14 TypeDeclaration: TYPE_TOKEN . IDENT IS_TOKEN Type

    IDENT  shift, and go to state 11


State 3

   63 RoutineDeclaration: ROUTINE_TOKEN . IDENT
   64                   | ROUTINE_TOKEN . IDENT IS_TOKEN END_TOKEN
   65                   | ROUTINE_TOKEN . IDENT IS_TOKEN Body END_TOKEN
   66                   | ROUTINE_TOKEN . IDENT COLON Type
   67                   | ROUTINE_TOKEN . IDENT COLON Type IS_TOKEN END_TOKEN
   68                   | ROUTINE_TOKEN . IDENT COLON Type IS_TOKEN Body END_TOKEN
   69                   | ROUTINE_TOKEN . IDENT LPAREN RPAREN
   70                   | ROUTINE_TOKEN . IDENT LPAREN Parameters RPAREN
   71                   | ROUTINE_TOKEN . IDENT LPAREN RPAREN IS_TOKEN END_TOKEN
   72                   | ROUTINE_TOKEN . IDENT LPAREN Parameters RPAREN IS_TOKEN END_TOKEN
   73                   | ROUTINE_TOKEN . IDENT LPAREN RPAREN IS_TOKEN Body END_TOKEN
   74                   | ROUTINE_TOKEN . IDENT LPAREN Parameters RPAREN IS_TOKEN Body END_TOKEN
   75                   | ROUTINE_TOKEN . IDENT LPAREN RPAREN COLON Type
   76                   | ROUTINE_TOKEN . IDENT LPAREN Parameters RPAREN COLON Type
   77                   | ROUTINE_TOKEN . IDENT LPAREN RPAREN COLON Type IS_TOKEN END_TOKEN
   78                   | ROUTINE_TOKEN . IDENT LPAREN Parameters RPAREN COLON Type IS_TOKEN END_TOKEN
   79                   | ROUTINE_TOKEN . IDENT LPAREN RPAREN COLON Type IS_TOKEN Body END_TOKEN
   81                   | ROUTINE_TOKEN . IDENT LPAREN Parameters RPAREN COLON Type IS_TOKEN Body END_TOKEN $@1

    IDENT  shift, and go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    2 Program: ProgramFull .

    $default  reduce using rule 2 (Program)


State 6

    3 ProgramFull: SimpleDeclaration . TERMINAL
    4            | SimpleDeclaration . TERMINAL ProgramFull

    TERMINAL  shift, and go to state 14


State 7

    7 SimpleDeclaration: VariableDeclaration .

    $default  reduce using rule 7 (SimpleDeclaration)


State 8

    8 SimpleDeclaration: TypeDeclaration .

    $default  reduce using rule 8 (SimpleDeclaration)


State 9

    5 ProgramFull: RoutineDeclaration . TERMINAL
    6            | RoutineDeclaration . TERMINAL ProgramFull

    TERMINAL  shift, and go to state 15


State 10

    9 VariableDeclaration: VAR_TOKEN IDENT . COLON Type
   10                    | VAR_TOKEN IDENT . COLON Type IS_TOKEN Expression
   11                    | VAR_TOKEN IDENT . IS_TOKEN Expression

    COLON     shift, and go to state 16
    IS_TOKEN  shift, and go to state 17


State 11

   14 TypeDeclaration: TYPE_TOKEN IDENT . IS_TOKEN Type

    IS_TOKEN  shift, and go to state 18


State 12

   63 RoutineDeclaration: ROUTINE_TOKEN IDENT .
   64                   | ROUTINE_TOKEN IDENT . IS_TOKEN END_TOKEN
   65                   | ROUTINE_TOKEN IDENT . IS_TOKEN Body END_TOKEN
   66                   | ROUTINE_TOKEN IDENT . COLON Type
   67                   | ROUTINE_TOKEN IDENT . COLON Type IS_TOKEN END_TOKEN
   68                   | ROUTINE_TOKEN IDENT . COLON Type IS_TOKEN Body END_TOKEN
   69                   | ROUTINE_TOKEN IDENT . LPAREN RPAREN
   70                   | ROUTINE_TOKEN IDENT . LPAREN Parameters RPAREN
   71                   | ROUTINE_TOKEN IDENT . LPAREN RPAREN IS_TOKEN END_TOKEN
   72                   | ROUTINE_TOKEN IDENT . LPAREN Parameters RPAREN IS_TOKEN END_TOKEN
   73                   | ROUTINE_TOKEN IDENT . LPAREN RPAREN IS_TOKEN Body END_TOKEN
   74                   | ROUTINE_TOKEN IDENT . LPAREN Parameters RPAREN IS_TOKEN Body END_TOKEN
   75                   | ROUTINE_TOKEN IDENT . LPAREN RPAREN COLON Type
   76                   | ROUTINE_TOKEN IDENT . LPAREN Parameters RPAREN COLON Type
   77                   | ROUTINE_TOKEN IDENT . LPAREN RPAREN COLON Type IS_TOKEN END_TOKEN
   78                   | ROUTINE_TOKEN IDENT . LPAREN Parameters RPAREN COLON Type IS_TOKEN END_TOKEN
   79                   | ROUTINE_TOKEN IDENT . LPAREN RPAREN COLON Type IS_TOKEN Body END_TOKEN
   81                   | ROUTINE_TOKEN IDENT . LPAREN Parameters RPAREN COLON Type IS_TOKEN Body END_TOKEN $@1

    COLON     shift, and go to state 19
    LPAREN    shift, and go to state 20
    IS_TOKEN  shift, and go to state 21

    $default  reduce using rule 63 (RoutineDeclaration)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    3 ProgramFull: SimpleDeclaration TERMINAL .
    4            | SimpleDeclaration TERMINAL . ProgramFull

    VAR_TOKEN      shift, and go to state 1
    TYPE_TOKEN     shift, and go to state 2
    ROUTINE_TOKEN  shift, and go to state 3

    $default  reduce using rule 3 (ProgramFull)

    ProgramFull          go to state 22
    SimpleDeclaration    go to state 6
    VariableDeclaration  go to state 7
    TypeDeclaration      go to state 8
    RoutineDeclaration   go to state 9


State 15

    5 ProgramFull: RoutineDeclaration TERMINAL .
    6            | RoutineDeclaration TERMINAL . ProgramFull

    VAR_TOKEN      shift, and go to state 1
    TYPE_TOKEN     shift, and go to state 2
    ROUTINE_TOKEN  shift, and go to state 3

    $default  reduce using rule 5 (ProgramFull)

    ProgramFull          go to state 23
    SimpleDeclaration    go to state 6
    VariableDeclaration  go to state 7
    TypeDeclaration      go to state 8
    RoutineDeclaration   go to state 9


State 16

    9 VariableDeclaration: VAR_TOKEN IDENT COLON . Type
   10                    | VAR_TOKEN IDENT COLON . Type IS_TOKEN Expression

    INT_TOKEN    shift, and go to state 24
    REAL_TOKEN   shift, and go to state 25
    BOOL_TOKEN   shift, and go to state 26
    REC_TOKEN    shift, and go to state 27
    ARRAY_TOKEN  shift, and go to state 28
    IDENT        shift, and go to state 29

    Type           go to state 30
    PrimitiveType  go to state 31
    RecordType     go to state 32
    ArrayType      go to state 33


State 17

   11 VariableDeclaration: VAR_TOKEN IDENT IS_TOKEN . Expression

    LPAREN        shift, and go to state 34
    TRUE_TOKEN    shift, and go to state 35
    FALSE_TOKEN   shift, and go to state 36
    IDENT         shift, and go to state 37
    INT_LITERAL   shift, and go to state 38
    REAL_LITERAL  shift, and go to state 39

    Expression         go to state 40
    Relation           go to state 41
    Simple             go to state 42
    Factor             go to state 43
    Summand            go to state 44
    Primary            go to state 45
    ModifiablePrimary  go to state 46
    RoutineCall        go to state 47


State 18

   14 TypeDeclaration: TYPE_TOKEN IDENT IS_TOKEN . Type

    INT_TOKEN    shift, and go to state 24
    REAL_TOKEN   shift, and go to state 25
    BOOL_TOKEN   shift, and go to state 26
    REC_TOKEN    shift, and go to state 27
    ARRAY_TOKEN  shift, and go to state 28
    IDENT        shift, and go to state 29

    Type           go to state 48
    PrimitiveType  go to state 31
    RecordType     go to state 32
    ArrayType      go to state 33


State 19

   66 RoutineDeclaration: ROUTINE_TOKEN IDENT COLON . Type
   67                   | ROUTINE_TOKEN IDENT COLON . Type IS_TOKEN END_TOKEN
   68                   | ROUTINE_TOKEN IDENT COLON . Type IS_TOKEN Body END_TOKEN

    INT_TOKEN    shift, and go to state 24
    REAL_TOKEN   shift, and go to state 25
    BOOL_TOKEN   shift, and go to state 26
    REC_TOKEN    shift, and go to state 27
    ARRAY_TOKEN  shift, and go to state 28
    IDENT        shift, and go to state 29

    Type           go to state 49
    PrimitiveType  go to state 31
    RecordType     go to state 32
    ArrayType      go to state 33


State 20

   69 RoutineDeclaration: ROUTINE_TOKEN IDENT LPAREN . RPAREN
   70                   | ROUTINE_TOKEN IDENT LPAREN . Parameters RPAREN
   71                   | ROUTINE_TOKEN IDENT LPAREN . RPAREN IS_TOKEN END_TOKEN
   72                   | ROUTINE_TOKEN IDENT LPAREN . Parameters RPAREN IS_TOKEN END_TOKEN
   73                   | ROUTINE_TOKEN IDENT LPAREN . RPAREN IS_TOKEN Body END_TOKEN
   74                   | ROUTINE_TOKEN IDENT LPAREN . Parameters RPAREN IS_TOKEN Body END_TOKEN
   75                   | ROUTINE_TOKEN IDENT LPAREN . RPAREN COLON Type
   76                   | ROUTINE_TOKEN IDENT LPAREN . Parameters RPAREN COLON Type
   77                   | ROUTINE_TOKEN IDENT LPAREN . RPAREN COLON Type IS_TOKEN END_TOKEN
   78                   | ROUTINE_TOKEN IDENT LPAREN . Parameters RPAREN COLON Type IS_TOKEN END_TOKEN
   79                   | ROUTINE_TOKEN IDENT LPAREN . RPAREN COLON Type IS_TOKEN Body END_TOKEN
   81                   | ROUTINE_TOKEN IDENT LPAREN . Parameters RPAREN COLON Type IS_TOKEN Body END_TOKEN $@1

    RPAREN  shift, and go to state 50
    IDENT   shift, and go to state 51

    ParameterDeclaration  go to state 52
    Parameters            go to state 53


State 21

   64 RoutineDeclaration: ROUTINE_TOKEN IDENT IS_TOKEN . END_TOKEN
   65                   | ROUTINE_TOKEN IDENT IS_TOKEN . Body END_TOKEN
